--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-evernote",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Create note using Evernote API",
   "author": "nghoang2013@gmail.com",
   "license": "ISC",
@@ -8,6 +8,10 @@
     "node-red",
     "evernote"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VNXtreme/node-red-contrib-evernote"
+  },
   "node-red": {
     "nodes": {
       "evernote-credentials": "evernote.js",
